--- a/composer.json
+++ b/composer.json
@@ -13,43 +13,36 @@
   "scripts": {
     "load": "@composer dump-autoload -o",
     "script": "@php ./vendor/catpaw/core/scripts/start.php",
-    
-    "start:hello-world": "@script src/hello-world/main.php",
-    "dev:hello-world": "@start:hello-world dev 100 && @dev:hello-world",
+    "start:helloworld": "@script src/helloworld/main.php",
+    "dev:helloworld": "@start:helloworld dev 100 && @dev:helloworld",
     "start:modules": "@script src/modules/main.php",
     "dev:modules": "@start:modules dev 100 && @dev:modules",
-    "start:svelte": "@script src/modules/main.php",
-    "dev:svelte": "@start:modules dev 100 && @dev:modules",
-    
-    "start:web:example:hello-world": "@script src/web/hello-world/main.php",
-    "dev:web:example:hello-world": "@start:web:example:hello-world dev 100 && @dev:web:example:hello-world",
-    "start:web:example:cats": "@script src/web/cats/main.php",
-    "dev:web:example:cats": "@start:web:example:cats dev 100 && @dev:web:example:cats",
-    "start:web:example:params": "@script src/web/params/main.php",
-    "dev:web:example:params": "@start:web:example:params dev 100 && @dev:web:example:params",
-    "start:web:example:not-found": "@script src/web/not-found/main.php",
-    "dev:web:example:not-found": "@start:web:example:not-found dev 100 && @dev:web:example:not-found",
-    "start:web:example:session": "@script src/web/session/main.php",
-    "dev:web:example:session": "@start:web:example:session dev 100 && @dev:web:example:session",
-    "start:web:example:modules": "@script src/web/modules/main.php",
-    "dev:web:example:modules": "@start:web:example:modules dev 100 && @dev:web:example:modules",
-    "start:web:example:web-socket": "@script src/web/web-socket/main.php",
-    "dev:web:example:web-socket": "@start:web:example:web-socket dev 100 && @dev:web:example:web-socket",
-    "start:web:example:byte-range": "@script src/web/byte-range/main.php",
-    "dev:web:example:byte-range": "@start:web:example:byte-range dev 100 && @dev:web:example:byte-range",
-    "start:web:example:custom-attributes": "@script src/web/custom-attributes/main.php",
-    "dev:web:example:custom-attributes": "@start:web:example:custom-attributes dev 100 && @dev:web:example:custom-attributes",
-    "start:web:example:filters": "@script src/web/filters/main.php",
-    "dev:web:example:filters": "@start:web:example:filters dev 100 && @dev:web:example:filters",
-
-    "start:example:mysql": "@script src/mysql/main.php",
-    "dev:example:mysql": "@start:example:mysql dev 100 && @dev:example:mysql",
-
-    "start:example:raspberrypi": "@script src/raspberrypi/main.php",
-    "dev:example:raspberrypi": "@start:example:raspberrypi dev 100 && @dev:example:raspberrypi",
-
-    "start:example:svelte": "@script src/svelte/main.php",
-    "dev:example:svelte": "@start:example:svelte dev 100 && @dev:example:svelte"
+    "start:web:helloworld": "@script src/web/helloworld/main.php",
+    "dev:web:helloworld": "@start:web:helloworld dev 100 && @dev:web:helloworld",
+    "start:web:cats": "@script src/web/cats/main.php",
+    "dev:web:cats": "@start:web:cats dev 100 && @dev:web:cats",
+    "start:web:params": "@script src/web/params/main.php",
+    "dev:web:params": "@start:web:params dev 100 && @dev:web:params",
+    "start:web:notfound": "@script src/web/notfound/main.php",
+    "dev:web:notfound": "@start:web:notfound dev 100 && @dev:web:notfound",
+    "start:web:session": "@script src/web/session/main.php",
+    "dev:web:session": "@start:web:session dev 100 && @dev:web:session",
+    "start:web:modules": "@script src/web/modules/main.php",
+    "dev:web:modules": "@start:web:modules dev 100 && @dev:web:modules",
+    "start:web:web-socket": "@script src/web/web-socket/main.php",
+    "dev:web:web-socket": "@start:web:web-socket dev 100 && @dev:web:web-socket",
+    "start:web:byterange": "@script src/web/byterange/main.php",
+    "dev:web:byterange": "@start:web:byterange dev 100 && @dev:web:byterange",
+    "start:web:customattributes": "@script src/web/customattributes/main.php",
+    "dev:web:customattributes": "@start:web:customattributes dev 100 && @dev:web:customattributes",
+    "start:web:filters": "@script src/web/filters/main.php",
+    "dev:web:filters": "@start:web:filters dev 100 && @dev:web:filters",
+    "start:mysql": "@script src/mysql/main.php",
+    "dev:mysql": "@start:mysql dev 100 && @dev:mysql",
+    "start:raspberrypi": "@script src/raspberrypi/main.php",
+    "dev:raspberrypi": "@start:raspberrypi dev 100 && @dev:raspberrypi",
+    "start:svelte:helloworld": "@script src/svelte/helloworld/main.php",
+    "dev:svelte:helloworld": "@start:svelte dev 100 && @dev:svelte"
   },
   "authors": [
     {
