--- a/composer.json
+++ b/composer.json
@@ -41,8 +41,8 @@
     "dev:mysql": "@start:mysql dev 100 && @dev:mysql",
     "start:raspberrypi": "@script src/raspberrypi/main.php",
     "dev:raspberrypi": "@start:raspberrypi dev 100 && @dev:raspberrypi",
-    "start:svelte:helloworld": "@script src/svelte/helloworld/main.php",
-    "dev:svelte:helloworld": "@start:svelte dev 100 && @dev:svelte"
+    "start:web:svelte": "@script src/web/svelte/main.php",
+    "dev:web:svelte": "@start:web:svelte dev 100 && @dev:web:svelte"
   },
   "authors": [
     {
@@ -58,7 +58,8 @@
     "catpaw/web": "^1.1",
     "catpaw/mysql": "^1.1",
     "catpaw/raspberrypi": "^1.2",
-    "catpaw/svelte": "^0.1"
+    "catpaw/svelte": "^0.1",
+    "ext-pcntl": "*"
   },
   "require-dev": {
     "amphp/phpunit-util": "^2.0",
