--- a/composer.json
+++ b/composer.json
@@ -59,6 +59,7 @@
     "catpaw/mysql": "^1.1",
     "catpaw/raspberrypi": "^1.2",
     "catpaw/svelte": "^0.1",
+    "catpaw/store": "^1.0",
     "ext-pcntl": "*"
   },
   "require-dev": {
