--- a/composer.json
+++ b/composer.json
@@ -14,33 +14,33 @@
     "load": "@composer dump-autoload -o",
     "script": "@php ./vendor/catpaw/core/scripts/start.php",
     "start:helloworld": "@script src/helloworld/main.php",
-    "dev:helloworld": "@start:helloworld dev 100 && @dev:helloworld",
+    "dev:helloworld": "composer start:helloworld dev 100 && composer dev:helloworld",
     "start:modules": "@script src/modules/main.php",
-    "dev:modules": "@start:modules dev 100 && @dev:modules",
+    "dev:modules": "composer start:modules dev 100 && composer dev:modules",
     "start:web:helloworld": "@script src/web/helloworld/main.php",
-    "dev:web:helloworld": "@start:web:helloworld dev 100 && @dev:web:helloworld",
+    "dev:web:helloworld": "composer start:web:helloworld dev 100 && composer dev:web:helloworld",
     "start:web:cats": "@script src/web/cats/main.php",
-    "dev:web:cats": "@start:web:cats dev 100 && @dev:web:cats",
+    "dev:web:cats": "composer start:web:cats dev 100 && composer dev:web:cats",
     "start:web:params": "@script src/web/params/main.php",
-    "dev:web:params": "@start:web:params dev 100 && @dev:web:params",
+    "dev:web:params": "composer start:web:params dev 100 && composer dev:web:params",
     "start:web:notfound": "@script src/web/notfound/main.php",
-    "dev:web:notfound": "@start:web:notfound dev 100 && @dev:web:notfound",
+    "dev:web:notfound": "composer start:web:notfound dev 100 && composer dev:web:notfound",
     "start:web:session": "@script src/web/session/main.php",
-    "dev:web:session": "@start:web:session dev 100 && @dev:web:session",
+    "dev:web:session": "composer start:web:session dev 100 && composer dev:web:session",
     "start:web:modules": "@script src/web/modules/main.php",
-    "dev:web:modules": "@start:web:modules dev 100 && @dev:web:modules",
+    "dev:web:modules": "composer start:web:modules dev 100 && composer dev:web:modules",
     "start:web:web-socket": "@script src/web/web-socket/main.php",
-    "dev:web:web-socket": "@start:web:web-socket dev 100 && @dev:web:web-socket",
+    "dev:web:web-socket": "composer start:web:web-socket dev 100 && composer dev:web:web-socket",
     "start:web:byterange": "@script src/web/byterange/main.php",
-    "dev:web:byterange": "@start:web:byterange dev 100 && @dev:web:byterange",
+    "dev:web:byterange": "composer start:web:byterange dev 100 && composer dev:web:byterange",
     "start:web:customattributes": "@script src/web/customattributes/main.php",
-    "dev:web:customattributes": "@start:web:customattributes dev 100 && @dev:web:customattributes",
+    "dev:web:customattributes": "composer start:web:customattributes dev 100 && composer dev:web:customattributes",
     "start:web:filters": "@script src/web/filters/main.php",
-    "dev:web:filters": "@start:web:filters dev 100 && @dev:web:filters",
+    "dev:web:filters": "composer start:web:filters dev 100 && composer dev:web:filters",
     "start:mysql": "@script src/mysql/main.php",
-    "dev:mysql": "@start:mysql dev 100 && @dev:mysql",
+    "dev:mysql": "composer start:mysql dev 100 && composer dev:mysql",
     "start:raspberrypi": "@script src/raspberrypi/main.php",
-    "dev:raspberrypi": "@start:raspberrypi dev 100 && @dev:raspberrypi"
+    "dev:raspberrypi": "composer start:raspberrypi dev 100 && composer dev:raspberrypi"
   },
   "authors": [
     {
