--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,11 +1,14 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Current file (paw)",
+            "name": "Listen (paw)",
+            "type": "php",
+            "request": "launch",
+            "port": 9003
+        },
+        {
+            "name": "Launch (paw)",
             "type": "php",
             "request": "launch",
             "program": "${workspaceFolder}/vendor/catpaw/core/scripts/start.php",
