--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
       "@php ./vendor/bin/php-cs-fixer fix src",
       "@php ./vendor/bin/php-cs-fixer fix tests"
     ],
+    "test": "@php vendor/bin/phpunit tests",
     "start:helloworld": "@script src/helloworld/main.php",
     "dev:helloworld": "composer start:helloworld dev 100 && composer dev:helloworld",
     "start:modules": "@script src/modules/main.php",
@@ -56,8 +57,8 @@
   ],
   "require": {
     "php": "^8.0",
-    "catpaw/core": "^1.2",
-    "catpaw/web": "^1.1",
+    "catpaw/core": "^1.3",
+    "catpaw/web": "^1.2",
     "catpaw/mysql": "^1.1",
     "catpaw/raspberrypi": "^1.2",
     "catpaw/store": "^1.0",
