--- a/composer.json
+++ b/composer.json
@@ -64,6 +64,11 @@
     "catpaw/store": "^1.0",
     "catpaw/openapi": "^1.0"
   },
+  "autoload": {
+    "psr-4": {
+      "Examples\\Modules\\": "src/modules/lib/"
+    }
+  },
   "require-dev":{
     "phpunit/phpunit": "^9.5",
     "friendsofphp/php-cs-fixer": "^3.8"
