--- a/composer.json
+++ b/composer.json
@@ -34,8 +34,8 @@
     "dev:web:session": "composer start:web:session dev 100 && composer dev:web:session",
     "start:web:modules": "@script src/web/modules/main.php",
     "dev:web:modules": "composer start:web:modules dev 100 && composer dev:web:modules",
-    "start:web:web-socket": "@script src/web/web-socket/main.php",
-    "dev:web:web-socket": "composer start:web:web-socket dev 100 && composer dev:web:web-socket",
+    "start:web:websocket": "@script src/web/websocket/main.php",
+    "dev:web:websocket": "composer start:web:websocket dev 100 && composer dev:web:websocket",
     "start:web:byterange": "@script src/web/byterange/main.php",
     "dev:web:byterange": "composer start:web:byterange dev 100 && composer dev:web:byterange",
     "start:web:customattributes": "@script src/web/customattributes/main.php",
