--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "name": "Launch (paw)",
             "type": "php",
             "request": "launch",
-            "program": "${workspaceFolder}/vendor/catpaw/core/scripts/start.php",
+            "program": "${workspaceFolder}/bin/start",
             "cwd": "${workspaceFolder}",
             "args": [
                 "${file}"
