--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,12 @@
       "XDEBUG_MODE='off' php ./vendor/bin/php-cs-fixer fix src",
       "XDEBUG_MODE='off' php ./vendor/bin/php-cs-fixer fix tests"
     ],
+    "action:test": [
+      "XDEBUG_MODE='off' php vendor/bin/phpunit ./tests"
+    ],
+    "test": [
+      "XDEBUG_MODE='debug' php vendor/bin/phpunit ./tests"
+    ],
     "start": "XDEBUG_MODE='debug' php ./bin/start -e",
     "start:helloworld": "@start src/helloworld/main.php",
     "start:mysql": "@start src/mysql/main.php",
