--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
     "start:web:websocket": "@start src/web/websocket/main.php",
     "start:web:byterange": "@start src/web/byterange/main.php",
     "start:web:customattributes": "@start src/web/customattributes/main.php",
-    "start:web:filters": "@start src/web/filters/main.php"
+    "start:web:filters": "@start src/web/filters/main.php",
+    "build": "XDEBUG_MODE='off' php -dphar.readonly=0 ./bin/start -ebin/build"
 
   },
   "authors": [{
