--- a/bin/build
+++ b/bin/build
@@ -7,8 +7,10 @@ use CatPaw\Environment\Attributes\EnvironmentFileName;
 use function Amp\File\createDirectory;
 use function Amp\File\deleteFile;
 use function Amp\File\exists;
+use function Amp\File\isFile;
 use function Amp\File\write;
 use function CatPaw\deleteDirectoryRecursively;
+use function CatPaw\listFilesRecursively;
 
 /**
  * 
@@ -20,13 +22,14 @@ function main(
     #[Environment("name")] string $name,
     #[Environment("entry")] string $entry,
     #[Environment("library")] string $library,
+    #[Environment("ignore")] ?array $ignore = [],
 ){
     $name = str_replace(['"',"\n"], ['\\"',''], $name);
     $entry = realpath(str_replace(['"',"\n"], ['\\"',''], $entry));
     $library = realpath(str_replace(['"',"\n"], ['\\"',''], $library));
     
     // $project = '.';
-    $filename = 'dist/app.phar';
+    $app = 'dist/app.phar';
     $start = 'dist/start';
     try {
 
@@ -61,19 +64,39 @@ function main(
         );
         PHP);
 
-        if (yield exists($filename)) {
-            yield deleteFile($filename);
+        if (yield exists($app)) {
+            yield deleteFile($app);
         }
 
-        if (yield exists($filename . '.gz')) {
-            yield deleteFile($filename . '.gz');
+        if (yield exists($app . '.gz')) {
+            yield deleteFile($app . '.gz');
         }
         
-        $phar = new Phar($filename);
+        $phar = new Phar($app);
 
         $phar->startBuffering();
 
         $phar->buildFromDirectory('.');
+
+        $directories = [];
+
+        foreach(yield listFilesRecursively('.', $ignore) as $filename){
+            do {
+                $pieces  = explode(DIRECTORY_SEPARATOR,$filename);
+                $count = count($pieces);
+                if($count <= 2){
+                    break;
+                }
+                $filename = join(DIRECTORY_SEPARATOR,array_slice($pieces,0,$count-1));
+            } while(true);
+
+
+            if(yield isFile($filename)) {
+                $phar->addFile($filename);
+            } else {
+                $directories[$filename] = false;
+            }
+        }
 
         $phar->setStub(
             '#!/usr/bin/env php'
@@ -88,11 +111,11 @@ function main(
         $phar->compressFiles(Phar::GZ);
 
         # Make the file executable
-        chmod($filename, 0770);
+        chmod($app, 0770);
 
         yield deleteFile($start);
 
-        echo "$filename successfully created" . PHP_EOL;
+        echo "$app successfully created" . PHP_EOL;
     } catch (Exception $e) {
         die(((string)$e).PHP_EOL);
     }
