--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "test": [
       "XDEBUG_MODE='debug' php vendor/bin/phpunit ./tests"
     ],
-    "start": "XDEBUG_MODE='debug' php ./bin/start -e",
+    "start": "XDEBUG_MODE='debug' php ./bin/start -e./",
     "start:helloworld": "@start src/helloworld/main.php",
     "start:mysql": "@start src/mysql/main.php",
     "start:raspberrypi": "@start src/raspberrypi/main.php",
@@ -38,7 +38,7 @@
     "start:web:byterange": "@start src/web/byterange/main.php",
     "start:web:customattributes": "@start src/web/customattributes/main.php",
     "start:web:filters": "@start src/web/filters/main.php",
-    "build": "XDEBUG_MODE='off' php -dphar.readonly=0 ./bin/start -ebin/build"
+    "build": "XDEBUG_MODE='off' php -dphar.readonly=0 ./bin/start -e./bin/build"
 
   },
   "authors": [{
