--- a/composer.json
+++ b/composer.json
@@ -50,11 +50,11 @@
     ],
     "require": {
         "php": "^8.1",
-        "catpaw/core": "0.4",
-        "catpaw/web": "0.4",
-        "catpaw/mysql": "0.4",
-        "catpaw/raspberrypi": "0.4",
-        "catpaw/store": "0.4"
+        "catpaw/core": "^0.4",
+        "catpaw/web": "^0.4",
+        "catpaw/mysql": "^0.4",
+        "catpaw/raspberrypi": "^0.4",
+        "catpaw/store": "^0.4"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.8",
