--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,10 @@
         "examples"
     ],
     "scripts": {
-        "load": "XDEBUG_MODE='off' composer dump-autoload -o",
+        "load": "XDEBUG_MODE=off composer dump-autoload -o",
         "fix": [
-            "XDEBUG_MODE=debug php ./vendor/bin/php-cs-fixer fix src",
-            "XDEBUG_MODE=debug php ./vendor/bin/php-cs-fixer fix tests"
+            "XDEBUG_MODE=off php ./vendor/bin/php-cs-fixer fix src",
+            "XDEBUG_MODE=off php ./vendor/bin/php-cs-fixer fix tests"
         ],
         "action:test": [
             "XDEBUG_MODE=debug php vendor/bin/phpunit ./tests"
