--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
             "XDEBUG_MODE=off php ./vendor/bin/php-cs-fixer fix tests"
         ],
         "action:test": [
-            "XDEBUG_MODE=debug php vendor/bin/phpunit ./tests"
+            "XDEBUG_MODE=off php vendor/bin/phpunit ./tests"
         ],
         "test": [
             "XDEBUG_MODE=debug php vendor/bin/phpunit ./tests"
