--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,8 @@
             "cwd": "${workspaceFolder}",
             "args": [
                 "-l./src/lib/",
-                "-e./src/main.php"
+                "-e./src/main.php",
+                "--build \"./build.yml\""
             ],
             "runtimeArgs": [
                 "-dxdebug.start_with_request=yes",
