--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
         "start:web:byterange": "@start src/web/byterange/main.php",
         "start:web:customattributes": "@start src/web/customattributes/main.php",
         "start:web:filters": "@start src/web/filters/main.php",
-        "build": "XDEBUG_MODE=off php -dphar.readonly=0 ./bin/start -e./bin/build"
+        "build": "XDEBUG_MODE=off php -dphar.readonly=0 ./vendor/catpaw/core/product.phar --build-config --build"
     },
     "authors": [
         {
