--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,21 @@
-/vendor/
-/tmp/
-/composer.lock
-/.settings/
-/nbproject/
+.DS_Store
 *.log
 *.exe
 *.pem
-/composer.phar
-/.history/
-/.idea/
-/.sessions/
-.php-cs-fixer.cache
+*.phar
+/.settings
+/.history
+/.idea
+/.sessions
+/.credentials
+/.login
+/.release
+/.cache
+/.svelte-kit
+/dist
+/vendor
+/tmp
+/nbproject
+/SESSION
+/node_modules
+/package
