--- a/composer.json
+++ b/composer.json
@@ -22,22 +22,22 @@
         "test": [
             "php -dxdebug.mode=debug -dxdebug.start_with_request=yes vendor/bin/phpunit ./tests"
         ],
-        "start": "php -dxdebug.mode=off ./bin/start -e./",
-        "start:helloworld": "@start src/helloworld/main.php",
-        "start:mysql": "@start src/mysql/main.php",
-        "start:raspberrypi": "@start src/raspberrypi/main.php",
-        "start:stores:readable": "@start src/stores/readable/main.php",
-        "start:stores:writable": "@start src/stores/writable/main.php",
-        "start:web:helloworld": "@start src/web/helloworld/main.php",
-        "start:web:cats": "@start src/web/cats/main.php",
-        "start:web:params": "@start src/web/params/main.php",
-        "start:web:notfound": "@start src/web/notfound/main.php",
-        "start:web:openapi": "@start src/web/openapi/main.php",
-        "start:web:session": "@start src/web/session/main.php",
-        "start:web:websocket": "@start src/web/websocket/main.php",
-        "start:web:byterange": "@start src/web/byterange/main.php",
-        "start:web:customattributes": "@start src/web/customattributes/main.php",
-        "start:web:filters": "@start src/web/filters/main.php",
+        "start": "php -dxdebug.mode=off ./bin/start --entry",
+        "start:helloworld": "@start ./src/helloworld/main.php",
+        "start:mysql": "@start ./src/mysql/main.php",
+        "start:raspberrypi": "@start ./src/raspberrypi/main.php",
+        "start:stores:readable": "@start ./src/stores/readable/main.php",
+        "start:stores:writable": "@start ./src/stores/writable/main.php",
+        "start:web:helloworld": "@start ./src/web/helloworld/main.php",
+        "start:web:cats": "@start ./src/web/cats/main.php",
+        "start:web:params": "@start ./src/web/params/main.php",
+        "start:web:notfound": "@start ./src/web/notfound/main.php",
+        "start:web:openapi": "@start ./src/web/openapi/main.php",
+        "start:web:session": "@start ./src/web/session/main.php",
+        "start:web:websocket": "@start ./src/web/websocket/main.php",
+        "start:web:byterange": "@start ./src/web/byterange/main.php",
+        "start:web:customattributes": "@start ./src/web/customattributes/main.php",
+        "start:web:filters": "@start ./src/web/filters/main.php",
         "build": "php -dxdebug.mode=off -dxdebug.start_with_request=no -dphar.readonly=0 ./product.phar --build-config --build",
         "post-autoload-dump": [
             "[ ! -f product.phar ] && wget https://github.com/tncrazvan/catpaw-dev-tools/releases/download/0.4.132/product.phar || echo \"product.phar found.\n\""
