--- a/composer.json
+++ b/composer.json
@@ -39,8 +39,11 @@
         "start:web:customattributes": "@start ./src/web/customattributes/main.php",
         "start:web:filters": "@start ./src/web/filters/main.php",
         "build": "php -dxdebug.mode=off -dxdebug.start_with_request=no -dphar.readonly=0 ./product.phar --build-config --build",
-        "post-autoload-dump": [
-            "[ ! -f product.phar ] && wget https://github.com/tncrazvan/catpaw-dev-tools/releases/download/0.4.167/product.phar || echo \"product.phar found.\n\""
+        "download:product": "[ ! -f product.phar ] && wget https://github.com/tncrazvan/catpaw-dev-tools/releases/download/0.4.167/product.phar || echo \"product.phar found.\n\"",
+        "edit:extensions": "@download:product && php product.phar --extensions",
+        "post-create-project-cmd": [
+            "@download:product",
+            "@edit:extensions"
         ]
     },
     "authors": [
