--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
         "start:web:customattributes": "@start ./src/web/customattributes/main.php",
         "start:web:filters": "@start ./src/web/filters/main.php",
         "build": "php -dxdebug.mode=off -dxdebug.start_with_request=no -dphar.readonly=0 ./product.phar --build-config --build",
-        "download:product": "[ ! -f product.phar ] && wget https://github.com/tncrazvan/catpaw-dev-tools/releases/download/0.4.175/product.phar || echo \"product.phar found.\n\"",
+        "download:product": "[ ! -f product.phar ] && wget https://github.com/tncrazvan/catpaw-dev-tools/releases/download/0.4.178/product.phar || echo \"product.phar found.\n\"",
         "edit:extensions": "@download:product && php product.phar --extensions",
         "post-autoload-dump": [
             "@download:product"
@@ -67,8 +67,7 @@
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.8",
         "phpunit/phpunit": "^9",
-        "vimeo/psalm": "^4.23",
-        "overtrue/phplint": "^5.3"
+        "vimeo/psalm": "^4.23"
     },
     "config": {
         "preferred-install": "dist",
