Migrating to fibers.

--- a/composer.json
+++ b/composer.json
@@ -56,6 +56,7 @@
             "role": "Developer"
         }
     ],
+    "minimum-stability": "dev",
     "require": {
         "php": "^8.2",
         "catpaw/core": "^0.7",
