--- a/composer.json
+++ b/composer.json
@@ -67,8 +67,7 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.8",
-        "phpunit/phpunit": "^9",
-        "vimeo/psalm": "^4.23"
+        "phpunit/phpunit": "^9"
     },
     "config": {
         "preferred-install": "dist",
