--- a/build.yml
+++ b/build.yml
@@ -1,4 +1,6 @@
 name: app
 entry: ./src/main.php
 libraries: ./src/lib
-match: /^\.\/(\.build-cache|src|vendor|resources|bin)\/.*/
+environment: ./env.yml
+info: false
+match: /(^\.\/(\.build-cache|src|vendor|resources|bin)\/.*)|(\.\/env\.yml)/
