--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress --ignore-platform-req=ext-sdl
     - name: Run tests
-      run: composer action:test
+      run: composer test
       
     # Docs: https://getcomposer.org/doc/articles/scripts.md
 
