--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,10 @@
             "php -dxdebug.mode=off -dxdebug.start_with_request=no ./vendor/bin/php-cs-fixer fix src",
             "php -dxdebug.mode=off -dxdebug.start_with_request=no ./vendor/bin/php-cs-fixer fix tests"
         ],
-        "action:test": [
+        "test": [
             "php -dxdebug.mode=off -dxdebug.start_with_request=no vendor/bin/phpunit ./tests"
         ],
-        "test": [
+        "test:debug": [
             "php -dxdebug.mode=debug -dxdebug.start_with_request=yes vendor/bin/phpunit ./tests"
         ],
         "start": "php -dxdebug.mode=debug,develop -dxdebug.start_with_request=yes ./bin/start --entry",
